# 1button

./: CMakeLists.txt  design.md  makefile  shell.html  vcpkg.json
assets/: cards.aseprite  space-bar.aseprite
include/: ButtonEntity.h  Card.h  CardEntity.h  CardManager.h  Entity.h  GameManager.h  GameState.h  GlobalState.h  SceneManager.h  ScreenManager.h  Sprite.h  StudioState.h  TextEntity.h  TextureManager.h
src/: CardManager.cpp  GameManager.cpp  SceneManager.cpp  ScreenManager.cpp  TextureManager.cpp  main.cpp
test/: CMakeLists.txt  main_tests.cpp
